# everscale_global_config_builder

./: .gitignore  Cargo.toml  README.md  everscale_global_config_builder.example.json  install.sh
src/: main.rs
