[package]
name = "everscale_global_config_builder"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "time"] }

adnl = { features = ["node"], git = "https://github.com/everx-labs/ever-adnl.git", tag = "0.11.32" }
ever_block = { git = "https://github.com/everx-labs/ever-block.git", tag = "1.11.20", features = ["export_key"] }
ton_api = { git = "https://github.com/everx-labs/ever-tl.git", package = "ton_api", tag = "0.4.29" }
